--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
 /* Mobile First */
+
+* {
+  box-sizing: border-box;
+}
+
 .title {
   background-color: #294969;
   color: red;
@@ -13,6 +18,18 @@
   width: 90%;
   height: auto;
   margin: 10px;
+}
+
+.google_link {
+  font-size: large;
+  border: 7px solid mediumvioletred;
+  border-bottom-color: darkmagenta;
+  padding: 5px;
+  margin: 15px;
+}
+
+.img {
+  margin: 20px;
 }
 
 body {
