--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,19 @@ ol {
   color: white;
 }
 
+section {
+  background: black;
+  border: 2px dashed hotpink;
+}
+
+p:first-child {
+  color: tomato;
+}
+
+p:last-child {
+  color: rgb(22, 179, 126)
+}
+
 /* Tablet Second*/
 @media screen and (min-width: 600px) {
   body {
